--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,12 @@
 <resources>
     <string name="app_name">Hackatec</string>
     <string name="title_activity_uminicio">UMInicio</string>
+    
+    <string-array name="tipoCarga">
+        <item>Elija una opción</item>
+        <item>Perecederos</item>
+        <item>Electrónicos</item>
+        <item>Maquinaria</item>
+        <item>Autopartes</item>
+    </string-array>
 </resources>
